fixed overlapping issue with z-index

--- a/bootstrap example/style.css
+++ b/bootstrap example/style.css
@@ -42,6 +42,7 @@ body {
   position: fixed;
   top: -150px;
   transition-duration: 0.6s;
+  z-index: 1;
 }
 
 /* Main Content */
